[vtRF.ini] changed defaults

--- a/app/conf/visuoTactileRF.ini
+++ b/app/conf/visuoTactileRF.ini
@@ -1,5 +1,6 @@
 name       visuoTactileRF
 robot      icub
-rate       100
+rate       50
 verbosity  0
-taxelsFile taxels.ini
+modality   1D
+taxelsFile taxels1D.ini
