--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -9,7 +9,7 @@ add_subdirectory(visuoTactileRF)
 add_subdirectory(visuoTactileWrapper)
 add_subdirectory(demoAvoidance)
 add_subdirectory(ultimateTracker)
-#add_subdirectory(tactileServoing)
+add_subdirectory(tactileServoing)
 add_subdirectory(fingertipTracker)
 #add_subdirectory(selfCalibration)
 #add_subdirectory(sceneFlowMod)
