dummy operational version of virtualContactGeneration module

--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -11,6 +11,7 @@ add_subdirectory(demoAvoidance)
 add_subdirectory(ultimateTracker)
 add_subdirectory(tactileServoing)
 add_subdirectory(fingertipTracker)
+add_subdirectory(virtualContactGeneration)
 #add_subdirectory(selfCalibration)
 #add_subdirectory(sceneFlowMod)
 #add_subdirectory(alignEyes)
