Improved ini files in order to comply with the skinDynLib enum

--- a/app/conf/taxels1D_learned.ini
+++ b/app/conf/taxels1D_learned.ini
@@ -1,4 +1,4 @@
-[SKIN_RIGHT_HAND]
+[skin_right_hand]
 modality	1D
 size    	192
 nTaxels 	4
@@ -9,7 +9,7 @@ Mapping (-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
 103     (0 0 0 1 4 9 58 12 37 62 75 92 105 69 46 44 37 53 38 49 0)   (0 0 0 4 12 12 17 33 43 71 116 151 161 133 101 72 79 85 78 56 0)
 118     (0 0 0 2 12 14 58 26 18 64 106 121 144 117 72 58 62 77 58 63 0)   (0 0 0 1 1 4 10 19 24 42 55 109 137 107 64 58 56 57 55 37 0)
 137     (0 0 0 4 16 12 39 25 32 33 58 77 142 115 50 48 45 51 34 45 1)   (0 0 0 1 1 2 2 15 13 32 68 106 136 119 92 81 75 84 77 53 0)
-[SKIN_LEFT_FOREARM]
+[skin_left_forearm]
 modality	1D
 size    	384
 nTaxels 	6
