--- a/app/conf/taxels2D_learned.ini
+++ b/app/conf/taxels2D_learned.ini
@@ -1,4 +1,4 @@
-[SKIN_RIGHT_HAND]
+[skin_right_hand]
 modality	2D
 size    	192
 nTaxels 	4
@@ -9,7 +9,7 @@ Mapping (-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
 103     (0 0 3 2 3 5 3 7 24 3 2 0 37 24 2 1 2 36 23 5 1 20 14 14 0 1 17 18 0 0 6 18)   (1 3 2 8 1 3 10 11 61 15 6 4 101 71 18 8 5 73 46 14 0 23 39 32 0 7 28 33 0 1 9 20)
 118     (1 1 1 4 2 7 5 7 46 8 5 4 77 49 11 4 4 62 40 10 0 23 28 25 0 6 23 32 0 1 6 24)   (2 0 5 5 1 6 8 9 38 10 3 0 61 46 9 5 3 47 29 9 1 20 25 21 0 2 22 19 0 0 9 14)
 137     (1 1 3 5 1 2 7 4 33 7 1 0 51 47 10 5 3 41 27 6 0 12 23 15 0 2 16 23 0 0 6 9)   (2 2 6 3 1 9 5 8 52 13 7 4 88 47 10 4 4 68 42 13 1 31 30 31 0 6 29 28 0 1 9 29)
-[SKIN_LEFT_FOREARM]
+[skin_left_forearm]
 modality	2D
 size        384
 nTaxels     9
