[virtualContactGeneration] updating .ini file

--- a/app/conf/virtualContactGeneration.ini
+++ b/app/conf/virtualContactGeneration.ini
@@ -2,14 +2,14 @@
 name         virtualContactGeneration
 robot        icubSim
 rate         100
-verbosity    0
+verbosity    2
 type	random
 
 [skin_parts]
 SKIN_LEFT_HAND         on 
 SKIN_LEFT_FOREARM      off 
 SKIN_LEFT_UPPER_ARM    off 
-SKIN_RIGHT_HAND        on 
+SKIN_RIGHT_HAND        off 
 SKIN_RIGHT_FOREARM     off
 SKIN_RIGHT_UPPER_ARM   off 
-SKIN_FRONT_TORSO       on   
+SKIN_FRONT_TORSO       off   
