--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -15,3 +15,4 @@ add_subdirectory(virtualContactGeneration)
 #add_subdirectory(selfCalibration)
 #add_subdirectory(sceneFlowMod)
 #add_subdirectory(alignEyes)
+add_subdirectory(testSkinDynLib)
