--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -12,6 +12,7 @@ add_subdirectory(ultimateTracker)
 #add_subdirectory(tactileServoing)
 add_subdirectory(fingertipTracker)
 add_subdirectory(virtualContactGeneration)
+add_subdirectory(skinEventsAggregator)
 #add_subdirectory(selfCalibration)
 #add_subdirectory(sceneFlowMod)
 #add_subdirectory(alignEyes)
