--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -13,6 +13,7 @@ add_subdirectory(ultimateTracker)
 add_subdirectory(fingertipTracker)
 add_subdirectory(virtualContactGeneration)
 add_subdirectory(skinEventsAggregator)
+add_subdirectory(ppsAggregEventsForiCubGui)
 #add_subdirectory(selfCalibration)
 #add_subdirectory(sceneFlowMod)
 #add_subdirectory(alignEyes)
