--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -10,7 +10,7 @@ add_subdirectory(visuoTactileWrapper)
 add_subdirectory(demoAvoidance)
 add_subdirectory(ultimateTracker)
 #add_subdirectory(tactileServoing)
-add_subdirectory(fingertipTracker)
+#add_subdirectory(fingertipTracker)
 add_subdirectory(virtualContactGeneration)
 #add_subdirectory(selfCalibration)
 #add_subdirectory(alignEyes)
