--- a/modules/testSkinDynLib/CMakeLists.txt
+++ b/modules/testSkinDynLib/CMakeLists.txt
@@ -2,20 +2,18 @@
 # Author: Alessandro Roncone
 # CopyPolicy: Released under the terms of the GNU GPL v2.0.
 
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.5)
 project(visuoTactileRF)
 
 file(GLOB source *.cpp)
 file(GLOB header *.h)
 
-include_directories(${ICUB_INCLUDE_DIRS})
-
 source_group("Source Files" FILES ${source})
 source_group("Header Files" FILES ${header})
 
-add_executable(testSkinDynLib ${source} ${header} )
+add_executable(testSkinDynLib ${source} ${header})
 
-target_link_libraries(testSkinDynLib ${YARP_LIBRARIES} ${ICUB_LIBRARIES})
+target_link_libraries(testSkinDynLib ${YARP_LIBRARIES} skinDynLib)
 
 install(TARGETS testSkinDynLib DESTINATION bin)
 
