[demoAvoidance] minor fix demoAvoidance compliation error of including 'iCub/skinDynLib/common.h'

--- a/modules/demoAvoidance/CMakeLists.txt
+++ b/modules/demoAvoidance/CMakeLists.txt
@@ -9,6 +9,6 @@ set(sources demoAvoidance.cpp)
 source_group("Source Files" FILES ${sources})
 
 add_executable(demoAvoidance ${sources})
-target_link_libraries(demoAvoidance ${YARP_LIBRARIES} ctrlLib)
+target_link_libraries(demoAvoidance periPersonalSpace ${YARP_LIBRARIES} ctrlLib)
 install(TARGETS demoAvoidance DESTINATION bin)
 
