--- a/modules/visuoTactileWrapper/CMakeLists.txt
+++ b/modules/visuoTactileWrapper/CMakeLists.txt
@@ -15,7 +15,7 @@ source_group("Header Files" FILES ${header})
 
 add_executable(visuoTactileWrapper ${source} ${header})
 
-target_link_libraries(visuoTactileWrapper periPersonalSpace ctrlLib ${YARP_LIBRARIES} ${OpenCV_LIBRARIES})
+target_link_libraries(visuoTactileWrapper periPersonalSpace ctrlLib ${YARP_LIBRARIES} ${OpenCV_LIBS})
 
 install(TARGETS visuoTactileWrapper DESTINATION bin)
 
