--- a/modules/ultimateTracker/CMakeLists.txt
+++ b/modules/ultimateTracker/CMakeLists.txt
@@ -15,7 +15,7 @@ source_group("Header Files" FILES ${header})
 
 add_executable(ultimateTracker ${source} ${header})
 
-target_link_libraries(ultimateTracker periPersonalSpace ${YARP_LIBRARIES} ${OpenCV_LIBRARIES})
+target_link_libraries(ultimateTracker periPersonalSpace ${YARP_LIBRARIES} ${OpenCV_LIBS})
 
 install(TARGETS ultimateTracker DESTINATION bin)
 
